Migrate website from Stanford servers

--- a/index.html
+++ b/index.html
@@ -1,105 +1,125 @@
 <!DOCTYPE HTML>
+<!--
+	Author: Fantine Huot
+-->
 <html>
 
 <head>
-	<title>Fantine Huot</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <title>Fantine Huot</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css" />
+    </noscript>
 </head>
 
 <body class="is-preload">
 
-	<!-- Page Wrapper -->
-	<div id="page-wrapper">
+    <!-- Page Wrapper -->
+    <div id="page-wrapper">
 
-		<!-- Header -->
-		<header id="header" class="alt">
-			<h1><a href="index.html">Fantine Huot</a></h1>
-			<nav>
-				<a href="#menu">Menu</a>
-			</nav>
-		</header>
+        <!-- Header -->
+        <header id="header" class="alt">
+            <h1><a href="index.html">Fantine Huot</a></h1>
+            <nav>
+                <a href="#menu">Menu</a>
+            </nav>
+        </header>
 
-		<!-- Menu -->
-		<nav id="menu">
-			<div class="inner">
-				<h2>Menu</h2>
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#">Log In</a></li>
-					<li><a href="#">Sign Up</a></li>
-				</ul>
-				<a href="#" class="close">Close</a>
-			</div>
-		</nav>
+        <!-- Menu -->
+        <nav id="menu">
+            <div class="inner">
+                <h2>Menu</h2>
+                <ul class="links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="science.html">Earth Sciences</a></li>
+                    <li><a href="machine_learning.html">Machine Learning</a></li>
+                    <li><a href="problem_solving.html">Problem-Solving</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+                <a href="#" class="close">Close</a>
+            </div>
+        </nav>
 
-		<!-- Banner -->
-		<section id="banner">
-			<div class="inner">
-				<div class="logo"><span class="icon fa-gem"></span></div>
-				<h2>This is Solid State</h2>
-				<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
-			</div>
-		</section>
+        <!-- Banner -->
+        <section id="banner">
+            <div class="inner">
+                <div class="logo"><span class="icon fa-gem"></span></div>
+                <h2>Hi, I'm Fantine.</h2>
+                <p>Earth Scientist &bullet; Machine Learning Engineer &bullet; Problem Solver</p>
+            </div>
+        </section>
 
-		<!-- Wrapper -->
-		<section id="wrapper">
+        <!-- Wrapper -->
+        <section id="wrapper">
 
-			<!-- One -->
-			<section id="one" class="wrapper spotlight style1">
-				<div class="inner">
-					<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">Magna arcu feugiat</h2>
-						<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non,
-							sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam
-							ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-						<a href="#" class="special">Learn more</a>
-					</div>
-				</div>
-			</section>
+            <!-- One -->
+            <section id="one" class="wrapper spotlight style1">
+                <div class="inner">
+                    <a href="science.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                    <div class="content">
+                        <h2 class="major">Computational earth sciences</h2>
+                        <p>
+                            Today’s Earth science problems are big, tangible, and real. I think the answers to these
+                            large-scale challenges lie in powerful computing.
+                        </p>
+                        <a href="science.html" class="special">Learn more</a>
+                    </div>
+                </div>
+            </section>
 
-			<!-- Two -->
-			<section id="two" class="wrapper alt spotlight style2">
-				<div class="inner">
-					<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">Tempus adipiscing</h2>
-						<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non,
-							sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam
-							ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-						<a href="#" class="special">Learn more</a>
-					</div>
-				</div>
-			</section>
+            <!-- Two -->
+            <section id="two" class="wrapper alt spotlight style2">
+                <div class="inner">
+                    <a href="machine_learning.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                    <div class="content">
+                        <h2 class="major">Machine learning</h2>
+                        <p>
+                            Addressing scientific challenges requires vast data analysis. I solve these problems through
+                            statisticalmodels and algorithms to identify patterns in these data.
+                        </p>
+                        <a href="machine_learning.html" class="special">Learn more</a>
+                    </div>
+                </div>
+            </section>
 
-			<!-- Three -->
-			<section id="three" class="wrapper spotlight style3">
-				<div class="inner">
-					<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">Nullam dignissim</h2>
-						<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non,
-							sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam
-							ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-						<a href="#" class="special">Learn more</a>
-					</div>
-				</div>
-			</section>
+            <!-- Three -->
+            <section id="three" class="wrapper spotlight style3">
+                <div class="inner">
+                    <a href="problem_solving.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                    <div class="content">
+                        <h2 class="major">Problem-solving</h2>
+                        <p>My favorite problems are the impossible problems &mdash; the ill-defined problems that
+                            require creative and innovative cross-disciplinary solutions.</p>
+                        <a href="problem_solving.html" class="special">Learn more</a>
+                    </div>
+                </div>
+            </section>
 
-			<!-- Four -->
-			<section id="four" class="wrapper alt style1">
-				<div class="inner">
-					<h2 class="major">Vitae phasellus</h2>
-					<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce
-						tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus.
-						Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-					<section class="features">
+            <!-- Four -->
+            <section id="four" class="wrapper alt style1">
+                <div class="inner">
+                    <h2 class="major">About me</h2>
+                    <p>I am currently pursuing a Ph.D. in Computational Earth Sciences at Stanford University, working
+                        on research
+                        at the intersection of deep learning and seismology. I hold a Master in Science and Executive
+                        Engineering
+                        from the Ecole Nationale Superieure des Mines de Paris.
+                    </p>
+                    <p>Previously, I was with Google, Chevron, Schlumberger, Actimage, and Valeo. I have moved around,
+                        spending
+                        time living in the Netherlands, France, Japan, the Philippines, and the United States. Somewhere
+                        in there, I
+                        found the time to get my helicopter license.
+                    </p>
+                    <p>
+                        When I am not doing science or writing code, I enjoy <a
+                            href="http://instagram.com/fantine.art">drawing
+                            fantasy creatures</a>.
+                    </p>
+                    <a href="about.html" class="special">Learn more</a>
+                    <!-- <section class="features">
 						<article>
 							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 							<h3 class="major">Sed feugiat lorem</h3>
@@ -127,66 +147,80 @@
 					</section>
 					<ul class="actions">
 						<li><a href="#" class="button">Browse All</a></li>
-					</ul>
-				</div>
-			</section>
+					</ul> -->
+                </div>
+            </section>
 
-		</section>
+        </section>
 
-		<!-- Footer -->
-		<section id="footer">
-			<div class="inner">
-				<h2 class="major">Get in touch</h2>
-				<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce
-					tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed
-					ac elementum arcu. Quisque placerat auctor laoreet.</p>
-				<form method="post" action="#">
-					<div class="fields">
-						<div class="field">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
-						</div>
-						<div class="field">
-							<label for="email">Email</label>
-							<input type="email" name="email" id="email" />
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="4"></textarea>
-						</div>
-					</div>
-					<ul class="actions">
-						<li><input type="submit" value="Send Message" /></li>
-					</ul>
-				</form>
-				<ul class="contact">
-					<li class="icon solid fa-home">
-						Untitled Inc<br />
-						1234 Somewhere Road Suite #2894<br />
-						Nashville, TN 00000-0000
-					</li>
-					<li class="icon solid fa-phone">(000) 000-0000</li>
-					<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-					<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-					<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-					<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled Inc. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</section>
+        <!-- Footer -->
+        <section id="footer">
+            <div class="inner">
+                <h2 class="major">Get in touch</h2>
+                <p>I’m always open to interesting conversations and collaboration.</p>
+                <form method="post" name="emailform" action="https://formspree.io/f/mjvpldab">
+                    <div class="fields">
+                        <div class="field">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" />
+                        </div>
+                        <div class="field">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" />
+                        </div>
+                        <div class="field">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" rows="4"></textarea>
+                        </div>
+                    </div>
+                    <ul class="actions">
+                        <li><input type="submit" value="Send Message" /></li>
+                    </ul>
+                </form>
+                <ul class="contact">
+                    <li class="icon solid fa-home">Amsterdam, Netherlands</li>
+                    <li class="icon solid fa-file"><a href="fantine_huot_resume_2021.pdf" target="_blank"
+                            rel="noopener noreferrer">My resume</a></li>
+                    <!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
+                    <!-- <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li> -->
+                    <li class="icon brands fa-gitlab"><a href="http://www.gitlab.com/fantine" target="_blank"
+                            rel="noopener noreferrer">gitlab.com/fantine</a>
+                    </li>
+                    <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/fantine" target="_blank"
+                            rel="noopener noreferrer">linkedin.com/in/fantine</a>
+                    </li>
+                    <!-- <li class="icon brands fa-google"><a
+							href="https://scholar.google.com/citations?hl=en&user=79VvQLMAAAAJ&authuser=1" target="_blank" rel="noopener noreferrer">Google Scholar</a></li> -->
+                    <!-- <li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li> -->
+                    <!-- <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li> -->
+                    <li class="icon brands fa-instagram"><a href="http://instagram.com/fantine.art" target="_blank"
+                            rel="noopener noreferrer">instagram.com/fantine.art</a></li>
 
-	</div>
+                </ul>
+                <ul class="copyright">
+                    <li>&copy; 2021, Fantine Huot. All rights reserved.</li>
+                </ul>
+            </div>
+        </section>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/gen_validatorv31.js"></script>
+    <script language="JavaScript">
+        // Code for validating the form
+        // http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
+        var frmvalidator = new Validator("emailform");
+        frmvalidator.addValidation("name", "req", "Please provide your name");
+        frmvalidator.addValidation("email", "req", "Please provide your email");
+        frmvalidator.addValidation("email", "email", "Please enter a valid email address"); 
+    </script>
 
 </body>
 
