--- a/about.html
+++ b/about.html
@@ -56,23 +56,21 @@
                 <div class="inner">
 
                     <h3 class="major">About me</h3>
-                    <p><span class="image left"><img src="images/about.jpg" alt="" /></span>I am currently pursuing a
-                        Ph.D. in
-                        Computational Earth Sciences at Stanford University, working on research
-                        at the intersection of deep learning and seismology. I hold a Master in Science and Executive
+                    <p><span class="image left"><img src="images/about.jpg" alt="" /></span>I am a research engineer specializing in the intersection of AI and real-world applications. 
+			    I am currently at Google DeepMind working on large language models. Before joining Google DeepMind, I was principal scientist at SambaNova Systems, designing 
+                        algorithms and computational methods for performing blazing-fast math on their unique AI hardware stack. I got a Ph.D. in
+                        Geophysics from Stanford University. I hold a Master in Science and Executive
                         Engineering
                         from the Ecole Nationale Superieure des Mines de Paris.
                     </p>
-                    <p>Previously, I was with Google, Chevron, Schlumberger, Actimage, and Valeo. I have moved around,
-                        spending
-                        time living in the Netherlands, France, Japan, the Philippines, and the United States. Somewhere
+                    <p>I have moved around, spending
+                        time living in the Netherlands, France, Japan, and the United States. Somewhere
                         in there, I
                         found the time to get my helicopter license.
                     </p>
                     <p>
                         When I am not doing science or writing code, I enjoy <a href="http://instagram.com/fantine.art"
-                            target="_blank" rel="noopener noreferrer">drawing
-                            fantasy creatures</a>.
+                            target="_blank" rel="noopener noreferrer">drawing</a> and rock-climbing.
                     </p>
                     <div class="row">
                         <div class="col-6 col-12-medium">
