--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
                 <h2>Menu</h2>
                 <ul class="links">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="machine_learning.html">AI Research</a></li>
                     <li><a href="science.html">Earth Sciences</a></li>
-                    <li><a href="machine_learning.html">Machine Learning</a></li>
                     <li><a href="problem_solving.html">Problem-Solving</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -47,7 +47,7 @@
             <header>
                 <div class="inner">
                     <h2>Hi, I'm Fantine.</h2>
-                    <p>Earth Scientist &bullet; Machine Learning Engineer &bullet; Problem Solver</p>
+                    <p>AI Researcher &bullet; Earth Scientist &bullet; Problem Solver</p>
                 </div>
             </header>
 
@@ -61,7 +61,7 @@
                         algorithms and computational methods for performing blazing-fast math on their unique AI hardware stack. I got a Ph.D. in
                         Geophysics from Stanford University. I hold a Master in Science and Executive
                         Engineering
-                        from the Ecole Nationale Superieure des Mines de Paris.
+                        from the Ecole Nationale Superieure des Mines de Paris. I got awarded Top Woman in AI Netherlands in 2024.
                     </p>
                     <p>I have moved around, spending
                         time living in the Netherlands, France, Japan, and the United States. Somewhere
@@ -75,7 +75,7 @@
                     <div class="row">
                         <div class="col-6 col-12-medium">
                             <ul class="actions small">
-                                <li><a href="fantine_huot_resume_2021.pdf" target="_blank" rel="noopener noreferrer"
+                                <li><a href="fantine_huot_resume_2024.pdf" target="_blank" rel="noopener noreferrer"
                                         class="button primary small">See my
                                         resume</a></li>
                             </ul>
@@ -132,7 +132,7 @@
             </form>
             <ul class="contact">
                 <li class="icon solid fa-home">Amsterdam, Netherlands</li>
-                <li class="icon solid fa-file"><a href="fantine_huot_resume_2021.pdf" target="_blank"
+                <li class="icon solid fa-file"><a href="fantine_huot_resume_2024.pdf" target="_blank"
                         rel="noopener noreferrer">My resume</a></li>
                 <!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
                 <!-- <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li> -->
@@ -151,7 +151,7 @@
 
             </ul>
             <ul class="copyright">
-                <li>&copy; 2021, Fantine Huot. All rights reserved.</li>
+                <li>&copy; 2024, Fantine Huot. All rights reserved.</li>
             </ul>
         </div>
     </section>
