--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 <h2>Menu</h2>
                 <ul class="links">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="machine_learning.html">AI Research</a></li>
                     <li><a href="science.html">Earth Sciences</a></li>
-                    <li><a href="machine_learning.html">Machine Learning</a></li>
                     <li><a href="problem_solving.html">Problem-Solving</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
                 <a href="#" class="close">Close</a>
             </div>
         </nav>
-
+	    
         <!-- Banner -->
         <section id="banner">
             <div class="inner">
