--- a/machine_learning.html
+++ b/machine_learning.html
@@ -33,8 +33,8 @@
                 <h2>Menu</h2>
                 <ul class="links">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="machine_learning.html">AI Research</a></li>
                     <li><a href="science.html">Earth Sciences</a></li>
-                    <li><a href="machine_learning.html">Machine Learning</a></li>
                     <li><a href="problem_solving.html">Problem-Solving</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
