--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="inner">
                 <div class="logo"><span class="icon fa-gem"></span></div>
                 <h2>Hi, I'm Fantine.</h2>
-                <p>Earth Scientist &bullet; Machine Learning Engineer &bullet; Problem Solver</p>
+                <p>AI Researcher &bullet; Earth Scientist &bullet; Problem Solver</p>
             </div>
         </section>
 
