--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <!-- One -->
             <section id="one" class="wrapper spotlight style1">
                 <div class="inner">
-                    <a href="science.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+		    <a href="machine_learning.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
                     <div class="content">
-                        <h2 class="major">Computational earth sciences</h2>
+                        <h2 class="major">AI Research</h2>
                         <p>
-                            Today’s Earth science problems are big, tangible, and real. I think the answers to these
-                            large-scale challenges lie in powerful computing.
+                            AI has propelled discovery in a number of scientific fields. I work on expanding the
+		     		boundaries of its capabilities. 
                         </p>
-                        <a href="science.html" class="special">Learn more</a>
+			<a href="machine_learning.html" class="special">Learn more</a>
                     </div>
                 </div>
             </section>
@@ -72,14 +72,14 @@
             <!-- Two -->
             <section id="two" class="wrapper alt spotlight style2">
                 <div class="inner">
-                    <a href="machine_learning.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                    <a href="science.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
                     <div class="content">
-                        <h2 class="major">Machine learning</h2>
+                        <h2 class="major">Computational earth sciences</h2>
                         <p>
-                            Addressing scientific challenges requires vast data analysis. I solve these problems through
-                            statisticalmodels and algorithms to identify patterns in these data.
+			Today’s Earth science problems are big, tangible, and real. I think the answers to these
+                            large-scale challenges lie in powerful computing.
                         </p>
-                        <a href="machine_learning.html" class="special">Learn more</a>
+			<a href="science.html" class="special">Learn more</a>
                     </div>
                 </div>
             </section>
