--- a/about.html
+++ b/about.html
@@ -58,10 +58,10 @@
                     <h3 class="major">About me</h3>
                     <p><span class="image left"><img src="images/about.jpg" alt="" /></span>I am a research engineer specializing in the intersection of AI and real-world applications. 
 			    I am currently at Google DeepMind working on large language models. Before joining Google DeepMind, I was principal scientist at SambaNova Systems, designing 
-                        algorithms and computational methods for performing blazing-fast math on their unique AI hardware stack. I got a Ph.D. in
-                        Geophysics from Stanford University. I hold a Master in Science and Executive
+                        algorithms and computational methods for performing blazing-fast math on their unique AI hardware stack. I hold a Ph.D. in
+                        Geophysics from Stanford University and a Master in Science and Executive
                         Engineering
-                        from the Ecole Nationale Superieure des Mines de Paris. I got awarded Top Woman in AI Netherlands in 2024.
+                        from the Ecole Nationale Superieure des Mines de Paris. I recently got awarded Top Woman in AI Netherlands 2024 🎉.
                     </p>
                     <p>I have moved around, spending
                         time living in the Netherlands, France, Japan, and the United States. Somewhere
