--- a/index.html
+++ b/index.html
@@ -101,23 +101,22 @@
             <section id="four" class="wrapper alt style1">
                 <div class="inner">
                     <h2 class="major">About me</h2>
-                    <p>I am currently pursuing a Ph.D. in Computational Earth Sciences at Stanford University, working
-                        on research
-                        at the intersection of deep learning and seismology. I hold a Master in Science and Executive
+                       I am a research engineer specializing in the intersection of AI and real-world applications. 
+			    I am currently at Google DeepMind working on large language models. Before joining Google DeepMind, I was principal scientist at SambaNova Systems, designing 
+                        algorithms and computational methods for performing blazing-fast math on their unique AI hardware stack. I hold a Ph.D. in
+                        Geophysics from Stanford University and a Master in Science and Executive
                         Engineering
-                        from the Ecole Nationale Superieure des Mines de Paris.
+                        from the Ecole Nationale Superieure des Mines de Paris. I recently got awarded Top Woman in AI Netherlands 2024 🎉.
                     </p>
-                    <p>Previously, I was with Google, Chevron, Schlumberger, Actimage, and Valeo. I have moved around,
-                        spending
-                        time living in the Netherlands, France, Japan, the Philippines, and the United States. Somewhere
+                    <p>I have moved around, spending
+                        time living in the Netherlands, France, Japan, and the United States. Somewhere
                         in there, I
                         found the time to get my helicopter license.
                     </p>
                     <p>
-                        When I am not doing science or writing code, I enjoy <a
-                            href="http://instagram.com/fantine.art">drawing
-                            fantasy creatures</a>.
-                    </p>
+                        When I am not doing science or writing code, I enjoy <a href="http://instagram.com/fantine.art"
+                            target="_blank" rel="noopener noreferrer">drawing</a> and rock-climbing.
+		    </p>
                     <a href="about.html" class="special">Learn more</a>
                     <!-- <section class="features">
 						<article>
@@ -179,7 +178,7 @@
                 </form>
                 <ul class="contact">
                     <li class="icon solid fa-home">Amsterdam, Netherlands</li>
-                    <li class="icon solid fa-file"><a href="fantine_huot_resume_2021.pdf" target="_blank"
+                    <li class="icon solid fa-file"><a href="fantine_huot_resume_2024.pdf" target="_blank"
                             rel="noopener noreferrer">My resume</a></li>
                     <!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
                     <!-- <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li> -->
@@ -198,7 +197,7 @@
 
                 </ul>
                 <ul class="copyright">
-                    <li>&copy; 2021, Fantine Huot. All rights reserved.</li>
+                    <li>&copy; 2024, Fantine Huot. All rights reserved.</li>
                 </ul>
             </div>
         </section>
