--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="content">
                         <h2 class="major">AI Research</h2>
                         <p>
-                            AI has propelled discovery in a number of scientific fields. I work on expanding the
+                            AI has propelled discovery in a number of scientific fields. I work on eploring its applications and pushing the
 		     		boundaries of its capabilities. 
                         </p>
 			<a href="machine_learning.html" class="special">Learn more</a>
