--- a/index.html
+++ b/index.html
@@ -177,23 +177,23 @@
                     </ul>
                 </form>
                 <ul class="contact">
-                    <li class="icon solid fa-home">Amsterdam, Netherlands</li>
-                    <li class="icon solid fa-file"><a href="fantine_huot_resume_2024.pdf" target="_blank"
-                            rel="noopener noreferrer">My resume</a></li>
-                    <!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
-                    <!-- <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li> -->
-                    <li class="icon brands fa-gitlab"><a href="http://www.gitlab.com/fantine" target="_blank"
-                            rel="noopener noreferrer">gitlab.com/fantine</a>
-                    </li>
-                    <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/fantine" target="_blank"
-                            rel="noopener noreferrer">linkedin.com/in/fantine</a>
-                    </li>
-                    <!-- <li class="icon brands fa-google"><a
-							href="https://scholar.google.com/citations?hl=en&user=79VvQLMAAAAJ&authuser=1" target="_blank" rel="noopener noreferrer">Google Scholar</a></li> -->
-                    <!-- <li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li> -->
-                    <!-- <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li> -->
-                    <li class="icon brands fa-instagram"><a href="http://instagram.com/fantine.art" target="_blank"
-                            rel="noopener noreferrer">instagram.com/fantine.art</a></li>
+	                <li class="icon solid fa-home">Amsterdam, Netherlands</li>
+	                <li class="icon solid fa-file"><a href="fantine_huot_resume_2024.pdf" target="_blank"
+	                        rel="noopener noreferrer">My resume</a></li>
+	                <li class="icon brands fa-google"><a
+								href="https://scholar.google.com/citations?hl=en&user=79VvQLMAAAAJ&authuser=1" target="_blank" rel="noopener noreferrer">Google Scholar</a></li>
+	                <li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/fantine" target="_blank"
+	                        rel="noopener noreferrer">linkedin.com/in/fantine</a>
+			</li>
+			    <!-- <li class="icon solid fa-phone">(000) 000-0000</li> -->
+	                <!-- <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li> -->
+	                <li class="icon brands fa-github"><a href="http://www.github.com/fantine" target="_blank"
+	                        rel="noopener noreferrer">github.com/fantine</a>
+	                </li>
+	                <!-- <li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li> -->
+	                <!-- <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li> -->
+	                <li class="icon brands fa-instagram"><a href="http://instagram.com/fantine.art" target="_blank"
+	                        rel="noopener noreferrer">instagram.com/fantine.art</a></li>
 
                 </ul>
                 <ul class="copyright">
