--- a/machine_learning.html
+++ b/machine_learning.html
@@ -46,8 +46,8 @@
         <section id="wrapper">
             <header>
                 <div class="inner">
-                    <h2>Machine Learning</h2>
-                    <p>Finding hidden patterns in messy data.</p>
+                    <h2>AI Research</h2>
+                    <p>Pushing the boundaries of AI capabilities.</p>
                 </div>
             </header>
 
