--- a/science.html
+++ b/science.html
@@ -148,7 +148,7 @@
                         </li>
                     </ul>
                     <p>
-                        <code>Python</code> <code>C++</code> <code>TensorFlow</code> <code>Fortran</code>
+                        <code>Python</code> <code>C++</code> <code>TensorFlow</code> 
                     </p>
                     <div class="row">
                         <div class="col-6 col-12-medium">
