--- a/problem_solving.html
+++ b/problem_solving.html
@@ -90,7 +90,7 @@
                     </div>
 			
                     <h3 class="major">Finding what you need when you do not know what you need</h3>
-                    <p><span class="image left"><img src="images/compressor.jpg" alt="" /></span>In Japan, I worked on
+                    <p><span class="image right"><img src="images/compressor.jpg" alt="" /></span>In Japan, I worked on
                         the
                         <b>digital
                             rebranding</b> of <a href="https://www.valeo.com/en/japan/">Valeo</a>, an automotive
