--- a/machine_learning.html
+++ b/machine_learning.html
@@ -78,7 +78,7 @@
                         topography.
                     </p>
                     <p>
-                        I will be presenting this work at the <a href="https://www.hadr.ai/home"><b>NeurIPS 2020</b>
+                        I presented this work at the <a href="https://www.hadr.ai/home"><b>NeurIPS 2020</b>
                             Artificial
                             Intelligence for Humanitarian Assistance and
                             Disaster Response Workshop</a>.
@@ -91,7 +91,7 @@
                             <ul class="actions small">
                                 <li><a href="https://www.hadr.ai/home" class="button primary small">NeurIPS workshop</a>
                                 </li>
-                                <li><a href="https://arxiv.org/abs/2010.07445" class="button primary small">Get the
+                                <li><a href="https://ieeexplore.ieee.org/abstract/document/9840400" class="button primary small">Get the
                                         paper</a></li>
                             </ul>
                         </div>
