--- a/machine_learning.html
+++ b/machine_learning.html
@@ -55,6 +55,29 @@
             <div class="wrapper">
                 <div class="inner">
 
+                    <h3 class="major">Making language models more controllable and steerable</h3>
+                    <div class="col-12"><span class="image left"><img src="images/gem.jpg" alt="" /></span></div>
+                    <p>
+                        While LLMs generate natural language well enough to create fluent text, it is still difficult to control the generation process, leading to irrelevant, repetitive, and hallucinated content. 
+			I have been working on planning for making language generation less opaque and more grounded. My work has shown that planning is particularly beneficial (a) <a href="https://aclanthology.org/2023.tacl-1.55/">when the input and output are long</a> (e.g., a book, multiple news articles, stories), 
+			(b) <a href="https://aclanthology.org/2023.eacl-demo.13/">in a human-in-the-loop setting where a user works together with the model to edit text</a>; (c) <a href="https://arxiv.org/abs/2404.03381">in high-precision scenarios where the system’s output must be faithful to the input (e.g., with built-in citations)</a>; and (d) <a href="https://aclanthology.org/2024.eacl-long.131/">in cross-lingual generation and low-resource settings</a> in particular as a bridge between languages.
+                    </p>
+<!--                     <p>
+                        <code>Python</code> <code>TensorFlow</code> <code>JAX</code>
+                    </p> -->
+                    <div class="row">
+                        <div class="col-6 col-12-medium">
+                            <ul class="actions small">
+				<li><a href="https://gemini.google.com/" class="button primary small">Play with Gemini</a>
+                                </li>
+                                <li><a href="https://scholar.google.com/citations?user=79VvQLMAAAAJ&hl=en" class="button primary small">See publications</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="inner">
+
                     <h3 class="major">Estimating wildfire risk from remote-sensing data</h3>
                     <div class="col-12"><span class="image fit"><img src="images/fire.jpg" alt="" /></span></div>
                     <p>
