--- a/machine_learning.html
+++ b/machine_learning.html
@@ -59,9 +59,12 @@
                     <div class="col-12"><span class="image left"><img src="images/gem.jpg" alt="" /></span></div>
                     <p>
                         While LLMs generate natural language well enough to create fluent text, it is still difficult to control the generation process, leading to irrelevant, repetitive, and hallucinated content. 
-			I have been working on planning for making language generation less opaque and more grounded. My work has shown that planning is particularly beneficial (a) <a href="https://aclanthology.org/2023.tacl-1.55/">when the input and output are long</a> (e.g., a book, multiple news articles, stories), 
+			At Google DeepMind, I have been working on planning for making language generation less opaque and more grounded. My work has shown that planning is particularly beneficial (a) <a href="https://aclanthology.org/2023.tacl-1.55/">when the input and output are long</a> (e.g., a book, multiple news articles, stories), 
 			(b) <a href="https://aclanthology.org/2023.eacl-demo.13/">in a human-in-the-loop setting where a user works together with the model to edit text</a>; (c) <a href="https://arxiv.org/abs/2404.03381">in high-precision scenarios where the system’s output must be faithful to the input (e.g., with built-in citations)</a>; and (d) <a href="https://aclanthology.org/2024.eacl-long.131/">in cross-lingual generation and low-resource settings</a> in particular as a bridge between languages.
                     </p>
+		    <p>
+			    I got to be a small part of the large effort that led to Gemini, Google's largest and most capable AI model. Give it a try!
+		    </p>
 <!--                     <p>
                         <code>Python</code> <code>TensorFlow</code> <code>JAX</code>
                     </p> -->
