--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                         algorithms and computational methods for performing blazing-fast math on their unique AI hardware stack. I hold a Ph.D. in
                         Geophysics from Stanford University and a Master in Science and Executive
                         Engineering
-                        from the Ecole Nationale Superieure des Mines de Paris. I recently got awarded Top Woman in AI Netherlands 2024 🎉.
+                        from the Ecole Nationale Superieure des Mines de Paris. I recently got awarded Top AI Researcher 2024 by Women in AI Netherlands 🎉.
                     </p>
                     <p>I have moved around, spending
                         time living in the Netherlands, France, Japan, and the United States. Somewhere
